--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -6,6 +6,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     
 }
 
@@ -19,6 +20,8 @@ header {
     top: 0;
     right: 0;
     font-size: 0.7em;
+    padding-right: 1em;
+    padding-top: 0.2em;
 }
 
 
