--- a/css/style.css
+++ b/css/style.css
@@ -42,21 +42,27 @@ header {
   width: 100%;
   height: 20%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative; }
-
-#header__city-name {
-  font-size: 2em;
-  padding-top: 2vh; }
-
-#header__author, #header__author-icon {
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 0.7em;
-  padding-right: 1em;
-  padding-top: 0.2em; }
+  header #header__city-name {
+    font-size: 2em;
+    padding-top: 2vh; }
+  header #header__author, header #header__author-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 0.7em;
+    padding-right: 1em;
+    padding-top: 0.2em; }
+  header #header__author-icon {
+    font-size: 0.9em;
+    top: 0.1em;
+    left: 0.8em;
+    cursor: pointer; }
+  header a {
+    color: black; }
 
 body, html {
   height: 100vh;
@@ -122,6 +128,9 @@ aside {
 
 .black {
   color: #111; }
+
+.white {
+  color: #fff; }
 
 svg path {
   fill: #fff; }
