--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -4,25 +4,38 @@ header {
     width: 100%;
     height: 20%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
     
+    #header__city-name {
+        font-size: 2em;
+        padding-top: 2vh;
+    }
+
+    #header__author, #header__author-icon {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 0.7em;
+        padding-right: 1em;
+        padding-top: 0.2em;
+    }
+
+    #header__author-icon {
+        font-size: 0.9em;
+        top: 0.1em;
+        left: 0.8em;
+        cursor: pointer;
+    }
+
+    a {
+        color: black;
+    }
 }
 
-#header__city-name {
-    font-size: 2em;
-    padding-top: 2vh;
-}
 
-#header__author, #header__author-icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 0.7em;
-    padding-right: 1em;
-    padding-top: 0.2em;
-}
 
 
 
