--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
     padding-top: 2vh; }
   header #header__author, header #header__author-icon {
     position: absolute;
-    top: 0;
+    top: 0.1em;
     right: 0;
     font-size: 0.7em;
     padding-right: 1em;
@@ -62,7 +62,7 @@ header {
     left: 0.8em;
     cursor: pointer; }
   header a {
-    color: black; }
+    color: inherit; }
 
 body, html {
   height: 100vh;
