--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,9 @@
 @import "base/variables";
+@import "../node_modules/sass-autoprefixer/scss/prefixes";
 @import "base/reset";
-@import "base/media";
+
 
 @import "layout/aside";
 @import "layout/header";
 @import "base/base";
+@import "base/media";
