--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/*
+ * Mixin printing a linear-gradient
+ * as well as a plain color fallback
+ * and the `-webkit-` prefixed declaration
+ * @access public
+ * @param {Keyword | Angle} $direction - Linear gradient direction
+ * @param {Arglist} $color-stops - List of color-stops composing the gradient
+ *
+ * @see https://www.sitepoint.com/building-linear-gradient-mixin-sass/
+ */
 * {
   box-sizing: border-box; }
 
@@ -5,12 +15,6 @@ body {
   margin: 0;
   padding: 0; }
 
-@media screen and (max-width: 600px) {
-  body {
-    width: 100vw; }
-
-  #wrapper {
-    width: 100vw; } }
 aside {
   position: relative; }
 
@@ -135,5 +139,49 @@ aside {
 
 svg path {
   fill: #fff; }
+
+@media screen and (max-width: 600px) {
+  body {
+    width: 100vw; }
+
+  #wrapper {
+    width: 100vw; } }
+@media (orientation: landscape) {
+  #wrapper {
+    -webkit-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    #wrapper main,
+    #wrapper aside {
+      width: 50%;
+      height: 80%; }
+    #wrapper #main__temp {
+      align-items: baseline;
+      height: 52%; }
+      #wrapper #main__temp #temp {
+        font-size: 5em; }
+    #wrapper #main__icon #summary {
+      padding-top: 0em; }
+    #wrapper #main__additional-info {
+      padding-top: 0.5em; }
+    #wrapper aside::before {
+      display: none; }
+    #wrapper aside .week-forecast .week-forecast__icon,
+    #wrapper aside .week-forecast .week-forecast__temp,
+    #wrapper aside .week-forecast .week-forecast__day {
+      padding-top: 1.5em; }
+    #wrapper aside .week-forecast .week-forecast__icon {
+      height: 30%; }
+    #wrapper aside .week-forecast .week-forecast__temp {
+      height: 35%; }
+    #wrapper aside .week-forecast .week-forecast__day {
+      height: 0em; } }
 
 /*# sourceMappingURL=style.css.map */
