--- a/scss/base/media.scss
+++ b/scss/base/media.scss
@@ -22,6 +22,8 @@
             #main__temp {
                 align-items: baseline;
                 height: 52%;
+                margin-bottom: 0.5em;
+                margin-left: 1.5em;
 
                 #temp {
                     font-size: 5em;
@@ -47,11 +49,13 @@
                 }
 
                 .week-forecast {
+                    height: 80%;
+                    margin-top: 3em;
 
                     .week-forecast__icon,
                     .week-forecast__temp,
                     .week-forecast__day {
-                        padding-top: 1.5em;
+                        // padding-top: 1.5em;
                     }
 
                     .week-forecast__icon {
@@ -59,11 +63,11 @@
                     }
 
                     .week-forecast__temp {
-                        height: 35%;
+                        height: 25%;
                     }
 
                     .week-forecast__day {
-                        height: 0em;
+                        // height: 10%;
                     }
                 }
             }
