--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ svg path {
 
   #wrapper {
     width: 100vw; } }
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 800px) {
   #wrapper {
     -webkit-box-direction: normal;
     -webkit-box-orient: horizontal;
