--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -1,4 +1,4 @@
 $white: #fff;
 $black: #111;
 
-$landscape: "(orientation: landscape)";
+$landscape: "(orientation: landscape) and (max-width: 800px)";
